// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeagueTableWidget DOM rendering renders correctly after switching to mobile mode 1`] = `
<div>
  <table
    className="KambiWidget-card-background-color general"
  >
    <thead>
      <tr
        className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
      >
        <th
          className="title"
          colSpan="2"
        >
          League Table
        </th>
        <th
          className="column-name"
          title="Translated: \\"P\\""
        >
          Translated: "P"
        </th>
        <th
          className="column-name"
          title="Translated: \\"W\\""
        >
          Translated: "W"
        </th>
        <th
          className="column-name"
          title="Translated: \\"D\\""
        >
          Translated: "D"
        </th>
        <th
          className="column-name"
          title="Translated: \\"L\\""
        >
          Translated: "L"
        </th>
        <th
          className="column-name"
          title="Translated: \\"Gf\\""
        >
          Translated: "Gf"
        </th>
        <th
          className="column-name"
          title="Translated: \\"Ga\\""
        >
          Translated: "Ga"
        </th>
        <th
          className="column-name"
          title="Translated: \\"+/-\\""
        >
          Translated: "+/-"
        </th>
        <th
          className="column-name"
          title="Translated: \\"Pts\\""
        >
          Translated: "Pts"
        </th>
        <th
          className="margin"
        />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly after switching to mobile mode 2`] = `
<div>
  <table
    className="KambiWidget-card-background-color general"
  >
    <thead>
      <tr
        className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row"
      >
        <th
          className="title"
          colSpan="2"
        >
          League Table
        </th>
        <th
          className="column-picker"
          colSpan={6}
        />
        <th
          className="margin"
        />
      </tr>
      <tr
        className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general"
      >
        <th
          className="title"
          colSpan="2"
        >
          
        </th>
        <th
          className="column-name"
          title="Translated: \\"P\\""
        >
          Translated: "P"
        </th>
        <th
          className="column-name"
          title="Translated: \\"W\\""
        >
          Translated: "W"
        </th>
        <th
          className="column-name"
          title="Translated: \\"D\\""
        >
          Translated: "D"
        </th>
        <th
          className="column-name"
          title="Translated: \\"L\\""
        >
          Translated: "L"
        </th>
        <th
          className="column-name"
          title="Translated: \\"+/-\\""
        >
          Translated: "+/-"
        </th>
        <th
          className="column-name"
          title="Translated: \\"Pts\\""
        >
          Translated: "Pts"
        </th>
        <th
          className="margin"
        />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly in mobile mode 1`] = `
<div>
  <Table>
    <TableHeadMobile
      columnGroups={
        Array [
          Object {
            "columns": Array [
              Object {
                "className": "games-played",
                "key": "gamesPlayed",
                "name": "Games Played",
                "short": "P",
              },
              Object {
                "className": "wins",
                "key": "wins",
                "name": "Wins",
                "short": "W",
              },
              Object {
                "className": "draws",
                "key": "draws",
                "name": "Draws",
                "short": "D",
              },
              Object {
                "className": "losses",
                "key": "losses",
                "name": "Losses",
                "short": "L",
              },
              Object {
                "className": "goals-difference",
                "key": "goalsDifference",
                "name": "Difference",
                "short": "+/-",
              },
              Object {
                "className": "points",
                "key": "points",
                "name": "Points",
                "short": "Pts",
              },
            ],
            "id": "statistics",
            "render": [Function],
            "title": "Statistics",
          },
          Object {
            "columns": Array [
              Object {
                "className": "outcome",
                "key": "",
                "name": "Test BetOffer 1",
                "short": "Test BetOffer 1",
              },
              Object {
                "className": "outcome",
                "key": "",
                "name": "Test BetOffer 2",
                "short": "Test BetOffer 2",
              },
            ],
            "id": "outcomes",
            "render": [Function],
            "title": "Bet offers",
          },
        ]
      }
      initialColumnGroupIdx={0}
      onColumnGroupChanged={[Function]}
      showColumnPicker={true}
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
      </TableBodyRow>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with bet offers 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 101,
                "id": 1,
                "odds": 1001,
                "oddsAmerican": "1.1",
                "oddsFractional": "1.1",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 102,
                "id": 2,
                "odds": 1002,
                "oddsAmerican": "1.2",
                "oddsFractional": "1.2",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
        <TableBodyOutcomeCell />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 104,
                "id": 4,
                "odds": 1004,
                "oddsAmerican": "1.4",
                "oddsFractional": "1.4",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with custom position color matcher 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="LIGHT_GREEN"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 101,
                "id": 1,
                "odds": 1001,
                "oddsAmerican": "1.1",
                "oddsFractional": "1.1",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 102,
                "id": 2,
                "odds": 1002,
                "oddsAmerican": "1.2",
                "oddsFractional": "1.2",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="ORANGE"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
        <TableBodyOutcomeCell />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 104,
                "id": 4,
                "odds": 1004,
                "oddsAmerican": "1.4",
                "oddsFractional": "1.4",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with no data 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
        ]
      }
      title="League Table"
    />
    <TableBody />
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with position legend 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 101,
                "id": 1,
                "odds": 1001,
                "oddsAmerican": "1.1",
                "oddsFractional": "1.1",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 102,
                "id": 2,
                "odds": 1002,
                "oddsAmerican": "1.2",
                "oddsFractional": "1.2",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
        <TableBodyOutcomeCell />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 104,
                "id": 4,
                "odds": 1004,
                "oddsAmerican": "1.4",
                "oddsFractional": "1.4",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
    </TableBody>
  </Table>
  <Legend
    items={
      Array [
        Object {
          "color": "GREEN",
          "description": "Test legend description",
        },
      ]
    }
  />
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with title extracted from event's path (0 parts) 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 101,
                "id": 1,
                "odds": 1001,
                "oddsAmerican": "1.1",
                "oddsFractional": "1.1",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 102,
                "id": 2,
                "odds": 1002,
                "oddsAmerican": "1.2",
                "oddsFractional": "1.2",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
        <TableBodyOutcomeCell />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 104,
                "id": 4,
                "odds": 1004,
                "oddsAmerican": "1.4",
                "oddsFractional": "1.4",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with title extracted from event's path (2 parts) 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [
                    Object {
                      "name": "p1",
                    },
                    Object {
                      "name": "p2",
                    },
                  ],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 101,
                "id": 1,
                "odds": 1001,
                "oddsAmerican": "1.1",
                "oddsFractional": "1.1",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [
                    Object {
                      "name": "p1",
                    },
                    Object {
                      "name": "p2",
                    },
                  ],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 102,
                "id": 2,
                "odds": 1002,
                "oddsAmerican": "1.2",
                "oddsFractional": "1.2",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
        <TableBodyOutcomeCell />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [
                    Object {
                      "name": "p1",
                    },
                    Object {
                      "name": "p2",
                    },
                  ],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 104,
                "id": 4,
                "odds": 1004,
                "oddsAmerican": "1.4",
                "oddsFractional": "1.4",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly with title extracted from event's path (3 parts) 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 1",
            "short": "Test BetOffer 1",
          },
          Object {
            "className": "outcome",
            "key": "",
            "name": "Test BetOffer 2",
            "short": "Test BetOffer 2",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [
                    Object {
                      "name": "p1",
                    },
                    Object {
                      "name": "p2",
                    },
                    Object {
                      "name": "p3",
                    },
                  ],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 101,
                "id": 1,
                "odds": 1001,
                "oddsAmerican": "1.1",
                "oddsFractional": "1.1",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [
                    Object {
                      "name": "p1",
                    },
                    Object {
                      "name": "p2",
                    },
                    Object {
                      "name": "p3",
                    },
                  ],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 102,
                "id": 2,
                "odds": 1002,
                "oddsAmerican": "1.2",
                "oddsFractional": "1.2",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
        <TableBodyOutcomeCell />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={
              Object {
                "event": Object {
                  "path": Array [
                    Object {
                      "name": "p1",
                    },
                    Object {
                      "name": "p2",
                    },
                    Object {
                      "name": "p3",
                    },
                  ],
                },
              }
            }
            label={false}
            outcome={
              Object {
                "betOfferId": 104,
                "id": 4,
                "odds": 1004,
                "oddsAmerican": "1.4",
                "oddsFractional": "1.4",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
    </TableBody>
  </Table>
</div>
`;

exports[`LeagueTableWidget DOM rendering renders correctly without bet offers 1`] = `
<div>
  <Table>
    <TableHeadDesktop
      columns={
        Array [
          Object {
            "className": "games-played",
            "key": "gamesPlayed",
            "name": "Games Played",
            "short": "P",
          },
          Object {
            "className": "wins",
            "key": "wins",
            "name": "Wins",
            "short": "W",
          },
          Object {
            "className": "draws",
            "key": "draws",
            "name": "Draws",
            "short": "D",
          },
          Object {
            "className": "losses",
            "key": "losses",
            "name": "Losses",
            "short": "L",
          },
          Object {
            "className": "goals-for",
            "key": "goalsFor",
            "name": "Goals for",
            "short": "Gf",
          },
          Object {
            "className": "goals-against",
            "key": "goalsAgainst",
            "name": "Goals against",
            "short": "Ga",
          },
          Object {
            "className": "goals-difference",
            "key": "goalsDifference",
            "name": "Difference",
            "short": "+/-",
          },
          Object {
            "className": "points",
            "key": "points",
            "name": "Points",
            "short": "Pts",
          },
        ]
      }
      title="League Table"
    />
    <TableBody>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={1}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="FC Pęzino"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={1}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={1}
        />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 101,
                "id": 1,
                "odds": 1001,
                "oddsAmerican": "1.1",
                "oddsFractional": "1.1",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 102,
                "id": 2,
                "odds": 1002,
                "oddsAmerican": "1.2",
                "oddsFractional": "1.2",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
      <TableBodyRow>
        <TableBodyPositionCell>
          <PositionIndicator
            change={0}
            color="TRANSPARENT"
            position={2}
          />
        </TableBodyPositionCell>
        <TableBodyParticipantCell
          name="Błękitni Stargard"
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "games-played",
              "key": "gamesPlayed",
              "name": "Games Played",
              "short": "P",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "wins",
              "key": "wins",
              "name": "Wins",
              "short": "W",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "draws",
              "key": "draws",
              "name": "Draws",
              "short": "D",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "losses",
              "key": "losses",
              "name": "Losses",
              "short": "L",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-for",
              "key": "goalsFor",
              "name": "Goals for",
              "short": "Gf",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-against",
              "key": "goalsAgainst",
              "name": "Goals against",
              "short": "Ga",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "goals-difference",
              "key": "goalsDifference",
              "name": "Difference",
              "short": "+/-",
            }
          }
          value={2}
        />
        <TableBodyStatsCell
          column={
            Object {
              "className": "points",
              "key": "points",
              "name": "Points",
              "short": "Pts",
            }
          }
          value={2}
        />
        <TableBodyOutcomeCell />
        <TableBodyOutcomeCell>
          <OutcomeButton
            event={undefined}
            label={false}
            outcome={
              Object {
                "betOfferId": 104,
                "id": 4,
                "odds": 1004,
                "oddsAmerican": "1.4",
                "oddsFractional": "1.4",
              }
            }
            outlineStyle={false}
            updateOdds={true}
          />
        </TableBodyOutcomeCell>
      </TableBodyRow>
    </TableBody>
  </Table>
</div>
`;
